Add some translations

--- a/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-11 21:46+0900\n"
+"PO-Revision-Date: 2021-04-13 23:42+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -120,10 +120,8 @@ msgstr "これは、ポート `8008` でアクセス可能な S3 インスタン
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:48
-#, fuzzy
-#| msgid "**Note**: Versions of localstack newer than v0.11.5 require port `4566` instead of port `4572`. See this https://github.com/localstack/localstack/issues/2983[GitHub issue] for details on this change\n"
 msgid "Versions of localstack newer than v0.11.5 require port `4566` instead of port `4572`. See this https://github.com/localstack/localstack/issues/2983[GitHub issue] for details on this change."
-msgstr "**Note** : v0.11.5 より新しいバージョンの localstack では、ポート `4572` の代わりに `4566` を必要とします。この変更の詳細は link:https://github.com/localstack/localstack/issues/2983[GitHub issue] を参照してください。\n"
+msgstr "v0.11.5 より新しいバージョンの localstack では、ポート `4572` の代わりに `4566` を必要とします。この変更の詳細は link:https://github.com/localstack/localstack/issues/2983[GitHub issue] を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:50
@@ -230,7 +228,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:108
-#, fuzzy
 msgid "The default setting for `quarkus.http.limits.max-body-size` is 10240K. This may limit your ability to upload multipart files larger than the default. If you want to upload larger files, you will need to set this limit explicitly."
 msgstr "`quarkus.http.limits.max-body-size` のデフォルト設定は 10240K です。このため、デフォルトよりも大きなマルチパートファイルのアップロードが制限される場合があります。より大きなファイルをアップロードしたい場合は、この制限を明示的に設定する必要があります。"
 
