--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-04-11 17:10+0900\n"
+"PO-Revision-Date: 2021-04-13 23:24+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -323,21 +323,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:150
-#, fuzzy
 msgid "This endpoint has ID, access and refresh tokens injected. It returns a `preferred_username` claim from the ID token, a `scope` claim from the access token and also a refresh token availability status."
 msgstr "このエンドポイントには、ID、アクセス、およびリフレッシュ トークンが注入されています。ID トークンから `preferred_username` クレーム、アクセス トークンから `scope` クレーム、およびリフレッシュ トークンの可用性ステータスを返します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:152
-#, fuzzy
 msgid "Note that you do not have to inject the tokens - it is only required if the endpoint needs to use the ID token to interact with the currently authenticated user or use the access token to access a downstream service on behalf of this user."
-msgstr "エンドポイントが ID トークンを使用して現在認証されているユーザーとやりとりする必要がある場合や、アクセス・トークンを使用してこのユーザーに代わってダウンストリーム・サービスにアクセスする必要がある場合にのみ必要となります。"
+msgstr "基本的にトークンを注入する必要はありません。エンドポイントが ID トークンを使用して現在認証されているユーザーとやりとりする必要がある場合や、アクセス・トークンを使用してこのユーザーに代わってダウンストリーム・サービスにアクセスする必要がある場合にのみ必要となります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:154
-#, fuzzy
 msgid "Please see <<access_id_and_access_tokens,Access ID and Access Tokens>> section below for more information."
-msgstr "詳しくは下記の「 link:#access_id_and_access_tokens[アクセスID・アクセストークン] 」の項をご覧ください。"
+msgstr "詳しくは下記の link:#access_id_and_access_tokens[アクセスID・アクセストークン] の項をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:155
@@ -347,9 +344,8 @@ msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:158
-#, fuzzy
 msgid "The OpenID Connect extension allows you to define the configuration using the `application.properties` file which should be located at the `src/main/resources` directory."
-msgstr "OpenID Connect エクステンションを使用すると、 `application.properties` ファイルを使用して設定を定義することができます。 `src/main/resources` ディレクトリーにあるはずの ファイルを使用してください。"
+msgstr "OpenID Connect エクステンションを使用すると、src/main/resources` ディレクトリーにあるはずの `application.properties` ファイルを使用して設定を定義することができます。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:159
@@ -397,9 +393,8 @@ msgstr "CORSの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:182
-#, fuzzy
 msgid "If you plan to consume this application from another application running on a different domain, you will need to configure CORS (Cross-Origin Resource Sharing). Please read the link:http-reference#cors-filter[HTTP CORS documentation] for more details."
-msgstr "別のドメインで実行されている別のアプリケーションからこのアプリケーションを消費する予定の場合は、CORS (Cross-Origin Resource Sharing) を構成する必要があります。詳細については、 link:http-reference#cors-filter[HTTP CORS のドキュメント] をお読みください。"
+msgstr "別のドメインで実行されている別のアプリケーションからこのアプリケーションを利用する予定の場合は、CORS (Cross-Origin Resource Sharing) を構成する必要があります。詳細については、 link:http-reference#cors-filter[HTTP CORS のドキュメント] をお読みください。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:183
@@ -430,7 +425,6 @@ msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユ
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:197
-#, fuzzy
 msgid "Import the {quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart/config/quarkus-realm.json[realm configuration file] to create a new realm. For more details, see the Keycloak documentation about how to https://www.keycloak.org/docs/latest/server_admin/index.html#_create-realm[create a new realm]."
 msgstr "新しいレルムを作成するには、{quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart/config/quarkus-realm.json[realm構成ファイル]をインポートします。詳細については、 link:https://www.keycloak.org/docs/latest/server_admin/index.html#_create-realm[新しいレルムの作成] 方法についてのKeycloakのドキュメントを参照してください。"
 
@@ -612,31 +606,26 @@ msgstr "例えば、保護されたリソースに重複してアクセスした
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:279
-#, fuzzy
 msgid "`/index.html` and `/web-app/service`"
 msgstr "`/index.html` と `/web-app/service`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:280
-#, fuzzy
 msgid "`/web-app/service1` and `/web-app/service2`"
 msgstr "`/web-app/service1` と `/web-app/service2`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:281
-#, fuzzy
 msgid "`/web-app1/service` and `/web-app2/service`"
 msgstr "`/web-app1/service` と `/web-app2/service`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:283
-#, fuzzy
 msgid "`quarkus.oidc.authentication.cookie-path` is set to `/` by default but can be narrowed to the more specific root path such as `/web-app`."
 msgstr "`quarkus.oidc.authentication.cookie-path` は、デフォルトでは `/` に設定されていますが、 `/web-app` のように、より具体的なルートパスに絞り込むことができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:286
-#, fuzzy
 msgid "You can also set a `quarkus.oidc.authentication.cookie-path-header` property if the cookie path needs to be set dynamically.  For example, setting `quarkus.oidc.authentication.cookie-path-header=X-Forwarded-Prefix` means that the value of HTTP `X-Forwarded-Prefix` header will be used to set a cookie path."
 msgstr "クッキーパスを動的に設定する必要がある場合は、 `quarkus.oidc.authentication.cookie-path-header` プロパティを設定することもできます。例えば、 `quarkus.oidc.authentication.cookie-path-header=X-Forwarded-Prefix` を設定すると、HTTP `X-Forwarded-Prefix` ヘッダーの値がクッキーパスを設定するために使用されることを意味します。"
 
@@ -932,15 +921,13 @@ msgstr "トークンクレームと SecurityIdentity のロール"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:421
-#, fuzzy
 msgid "The way the roles are mapped to the SecurityIdentity roles from the verified tokens is identical to how it is done for the link:security-openid-connect#token-claims-and-securityidentity-roles[bearer tokens] with the only difference being is that https://openid.net/specs/openid-connect-core-1_0.html#IDToken[ID Token] is used as a source of the roles by default."
-msgstr "検証済みトークンからSecurityIdentityロールにロールをマッピングする方法は、 link:security-openid-connect#token-claims-and-securityidentity-roles[ベアラートークン] の場合と同じですが、唯一の違いは、 link:https://openid.net/specs/openid-connect-core-1_0.html#IDToken[ID] トークンがデフォルトでロールのソースとして使用されるということです。"
+msgstr "検証済みトークンからSecurityIdentityのロールにロールをマッピングする方法は、 link:security-openid-connect#token-claims-and-securityidentity-roles[ベアラートークン] の場合と同じですが、唯一の違いは、 link:https://openid.net/specs/openid-connect-core-1_0.html#IDToken[ID] トークンがデフォルトでロールのソースとして使用されるということです。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:423
-#, fuzzy
 msgid "Note if you use Keycloak then you should set a Microprofile JWT client scope for ID token to contain a `groups` claim, please see the https://www.keycloak.org/docs/latest/server_admin/#protocol[Keycloak Server Administration Guide] for more information."
-msgstr "Keycloakを使用する場合は、IDトークン用のMicroprofile JWTクライアントスコープに `groups` クレームを含めるように設定する必要があることに注意してください。詳細については、 link:https://www.keycloak.org/docs/latest/server_admin/#protocol[Keycloakサーバー管理ガイドを] 参照してください。"
+msgstr "Keycloakを使用する場合は、IDトークン用のMicroprofile JWTクライアントスコープに `groups` クレームを含めるように設定する必要があることに注意してください。詳細については、 link:https://www.keycloak.org/docs/latest/server_admin/#protocol[Keycloakサーバー管理ガイド] を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:425
