--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-26 23:13+0900\n"
+"PO-Revision-Date: 2021-04-13 23:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -733,33 +733,29 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/validation.adoc:362
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Validation groups for REST endpoint or service method validation"
-msgstr "RESTエンドポイントまたはサービスメソッドの検証グループ"
+msgstr "RESTエンドポイントまたはサービスメソッドのバリデーショングループ"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:366
-#, fuzzy
 msgid "It's sometimes necessary to enable different validation constraints for the same class when it's passed to a different method."
-msgstr "同じクラスが別のメソッドに渡されたときに、異なる検証制約を有効にする必要があることがあります。"
+msgstr "同じクラスが別のメソッドに渡されたときに、異なるバリデーション制約を有効にする必要があることがあります。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:371
-#, fuzzy
 msgid "For example, a `Book` may need to have a `null` identifier when passed to the `put` method (because the identifier will be generated), but a non-`null` identifier when passed to the `post` method (because the method needs the identifier to know what to update)."
 msgstr "例えば、 `Book` は、 `put` メソッドに渡されたときには `null` の識別子が必要ですが（識別子が生成されるため）、 `post` メソッドに渡されたときには `null` 以外の識別子が必要です（何を更新すべきかを知るためにメソッドが識別子を必要とするため）。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:374
-#, fuzzy
 msgid "To address this, you can take advantage of validation groups.  Validation groups are markers that you put on your constraints in order to enable or disable them at will."
-msgstr "これに対処するために、検証グループを利用することができます。バリデーション・グループは、制約を有効または無効にするために制約に付けるマーカーです。"
+msgstr "これに対処するために、バリデーション・グループを利用することができます。バリデーション・グループは、制約を有効または無効にするために制約に付けるマーカーです。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:376
-#, fuzzy
 msgid "First, define the `Put` and `Post` groups, which are just Java interfaces."
-msgstr "まず、 `Put` と `Post` グループを定義します。"
+msgstr "まず、 `Put` と `Post` グループを定義します。単なるJavaインタフェースです。"
 
 #. type: delimited block -
 #: upstream/_guides/validation.adoc:385
