--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-13 23:32+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using OpenID Connect Multi-Tenancy"
 msgstr "Quarkus - OpenID Connectマルチテナントを使用する"
 
@@ -82,9 +82,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:28
-#, fuzzy
 msgid "https://stedolan.github.io/jq/[jq tool]"
-msgstr "link:https://stedolan.github.io/jq/[ジェイキューツール]"
+msgstr "https://stedolan.github.io/jq/[jq tool]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:29
@@ -99,21 +98,18 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:33
-#, fuzzy
 msgid "In this example, we build a very simple application which offers a single land page:"
-msgstr "この例では、単一のランドページを提供する非常にシンプルなアプリケーションを構築しています。"
+msgstr "この例では、単一のランディングページを提供する非常にシンプルなアプリケーションを構築しています。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:35
-#, fuzzy
 msgid "`/{tenant}`"
 msgstr "`/{tenant}`"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:37
-#, fuzzy
 msgid "The land page is served by a JAX-RS Resource and shows information obtained from the OpenID Provider about the authenticated user and the current tenant."
-msgstr "ランドページはJAX-RSリソースによって提供され、認証されたユーザーと現在のテナントに関するOpenIDプロバイダから取得した情報を表示します。"
+msgstr "ランディングページはJAX-RSリソースによって提供され、認証されたユーザーと現在のテナントに関するOpenIDプロバイダから取得した情報を表示します。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:38
@@ -133,13 +129,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:46
-#, fuzzy
 msgid "The solution is located in the `security-openid-connect-multi-tenancy-quickstart` {quickstarts-tree-url}/security-openid-connect-multi-tenancy-quickstart[directory]."
 msgstr "ソリューションは `security-openid-connect-multi-tenancy` {quickstarts-tree-url}/security-openid-connect-multi-tenancy[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:47
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -162,7 +157,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:63
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `oidc` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `oidc` エクステンションを追加することができます。"
 
@@ -195,7 +189,6 @@ msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:82
-#, fuzzy
 msgid "Let's start by implementing the `/{tenant}` endpoint. As you can see from the source code below it is just a regular JAX-RS resource:"
 msgstr "まずは `/{tenant}` エンドポイントを実装してみましょう。下のソースコードを見るとわかるように、これは通常の JAX-RS リソースです。"
 
@@ -471,13 +464,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:217
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Starting and Configuring the Keycloak Server"
 msgstr "Keycloakサーバーの起動と設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:220
-#, fuzzy
 msgid "To start a Keycloak Server you can use Docker and just run the following command:"
 msgstr "Keycloak Serverを起動するにはDockerを使用し、以下のコマンドを実行するだけです。"
 
@@ -489,21 +481,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:227
-#, fuzzy
 msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth]."
 msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] でアクセスできるはずです。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:229
-#, fuzzy
 msgid "Log in as the `admin` user to access the Keycloak Administration Console. Username should be `admin` and password `admin`."
-msgstr "Keycloak Administration Consoleにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` ."
+msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` でしょう。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:231
-#, fuzzy
 msgid "Now, follow the steps below to import the realms for the two tenants:"
-msgstr "さて、以下の手順に従って、2つのテナントのための領域をインポートします。"
+msgstr "さて、以下の手順に従って、2つのテナントのためのレルムをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:233
@@ -525,37 +514,34 @@ msgstr "詳細については、 link:https://www.keycloak.org/docs/latest/serve
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:237
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running and Using the Application"
 msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:239
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in Developer Mode"
 msgstr "デベロッパーモードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:242
-#, fuzzy
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` ."
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:243
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in JVM Mode"
 msgstr "JVMモードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:246
-#, fuzzy
 msgid "When you're done playing with \"dev-mode\" you can run it as a standard Java application."
-msgstr "dev-mode」で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
+msgstr "\"dev-mode\" で遊び終わったら、通常のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:248
-#, fuzzy
 msgid "First compile it:"
 msgstr "まずコンパイルします。"
 
@@ -567,7 +553,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:255
-#, fuzzy
 msgid "Then run it:"
 msgstr "それから実行してください。"
 
@@ -579,25 +564,22 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:261
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in Native Mode"
 msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:264
-#, fuzzy
 msgid "This same demo can be compiled into native code: no modifications required."
 msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:268
-#, fuzzy
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
 msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:271
-#, fuzzy
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
 msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
@@ -609,7 +591,6 @@ msgstr "./mvnw package -Pnative\n"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:278
-#, fuzzy
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
 msgstr "コーヒーを飲んでから、このバイナリーを直接実行してみましょう。"
 
@@ -645,25 +626,21 @@ msgstr "すべてが期待通りに動作している場合は、認証のため
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:294
-#, fuzzy
 msgid "In order to authenticate to the application you should type the following credentials when at the Keycloak login page:"
 msgstr "アプリケーションを認証するためには、Keycloakのログインページで以下の認証情報を入力する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:296
-#, fuzzy
 msgid "Username: *alice*"
-msgstr "ユーザー名 *: アリス*"
+msgstr "Username: *alice*"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:297
-#, fuzzy
 msgid "Password: *alice*"
-msgstr "パスワード: *アリス*"
+msgstr "Password: *alice*"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:299
-#, fuzzy
 msgid "After clicking the `Login` button you should be redirected back to the application."
 msgstr "`Login` ボタンをクリックすると、アプリケーションにリダイレクトされます。"
 
@@ -675,9 +652,8 @@ msgstr "今試してみると、以下のURLからアプリケーションにア
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:303
-#, fuzzy
 msgid "http://localhost:8080/tenant-a[http://localhost:8080/tenant-a]"
-msgstr "link:http://localhost:8080/tenant-a[http://localhost:8080/tenant-a]"
+msgstr "http://localhost:8080/tenant-a[http://localhost:8080/tenant-a]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:305
@@ -693,21 +669,19 @@ msgstr "どちらの場合も、ユーザーの認証に成功すると、ラン
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:309
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Programmatically Resolving Tenants Configuration"
 msgstr "テナントの設定をプログラムで解決"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:313
-#, fuzzy
 msgid "If you need a more dynamic configuration for the different tenants you want to support and don't want to end up with multiple entries in your configuration file, you can use the `io.quarkus.oidc.TenantConfigResolver`."
-msgstr "サポートしたいさまざまなテナントに対して、より動的な設定が必要で、設定ファイルに複数のエントリーを入れたくない場合は、 `io.quarkus.oidc.TenantConfigResolver` ."
+msgstr "サポートしたいさまざまなテナントに対して、より動的な設定が必要で、設定ファイルに複数のエントリーを入れたくない場合は、 `io.quarkus.oidc.TenantConfigResolver` が利用出来ます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:315
-#, fuzzy
 msgid "This interface allows you to dynamically create tenant configurations at runtime:"
-msgstr "このインターフェイスを使用すると、実行時にテナント構成を動的に作成することができます。"
+msgstr "このインターフェイスを使用すると、実行時にテナント設定を動的に作成することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:319
@@ -804,9 +778,9 @@ msgstr "このメソッドから返される `OidcTenantConfig` は、 `applicat
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:364
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Tenant Resolution for OIDC 'web-app' applications"
-msgstr "OIDCの「web-app」アプリケーションのためのテナント解決"
+msgstr "OIDCの \"web-app\" アプリケーションのためのテナント解決"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:367
@@ -910,27 +884,24 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:414
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Disabling Tenant Configurations"
 msgstr "テナント設定を無効にする"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:417
-#, fuzzy
 msgid "Custom `TenantResolver` and `TenantConfigResolver` implementations may return `null` if no tenant can be inferred from the current request and a fallback to the default tenant configuration is required."
 msgstr "カスタムの `TenantResolver` および `TenantConfigResolver` の実装では、現在のリクエストからテナントを推測できず、デフォルトのテナント設定へのフォールバックが必要な場合は `null` を返すことがあります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:419
-#, fuzzy
 msgid "If it is expected that the custom resolvers will always infer a tenant then the default tenant configuration is not needed. One can disable it with the `quarkus.oidc.tenant-enabled=false` setting."
 msgstr "カスタムリゾルバが常にテナントを推論することが予想される場合、デフォルトのテナント設定は必要ありません。 `quarkus.oidc.tenant-enabled=false` の設定で無効にすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:421
-#, fuzzy
 msgid "Note that tenant specific configurations can also be disabled, for example: `quarkus.oidc.tenant-a.tenant-enabled=false`."
-msgstr "`quarkus.oidc.tenant-a.tenant-enabled=false` テナント固有の設定を無効にすることもできます。"
+msgstr "テナント固有の設定を無効にすることもできます。例: `quarkus.oidc.tenant-a.tenant-enabled=false`"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:422
@@ -946,30 +917,25 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:429
-#, fuzzy
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
-msgstr "link:https://www.keycloak.org/documentation.html[キーマントのドキュメント]"
+msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:430
-#, fuzzy
 msgid "https://openid.net/connect/[OpenID Connect]"
-msgstr "link:https://openid.net/connect/[オープンIDコネクト]"
+msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:431
-#, fuzzy
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
-msgstr "link:https://tools.ietf.org/html/rfc7519[ジェーソンウェブトークン]"
+msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:432
-#, fuzzy
 msgid "https://developers.google.com/identity/protocols/OpenIDConnect[Google OpenID Connect]"
-msgstr "link:https://developers.google.com/identity/protocols/OpenIDConnect[Google OpenID Connect]"
+msgstr "https://developers.google.com/identity/protocols/OpenIDConnect[Google OpenID Connect]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:432
-#, fuzzy
 msgid "link:security[Quarkus Security]"
-msgstr "link:security[Quarkusのセキュリティー]"
+msgstr "link:security[Quarkus Security]"
