--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
@@ -330,12 +330,12 @@ msgstr "レディネス・ヘルスチェック手順の追加"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:154
 msgid "In the previous section, we created a simple liveness health check procedure which states whether our application is running or not. In this section, we will create a readiness health check which will be able to state whether our application is able to process requests."
-msgstr ""
+msgstr "前のセクションでは、アプリケーションが実行されているかどうかを示す単純な liveness ヘルスチェックプロシージャを作成しました。このセクションでは、アプリケーションがリクエストを処理することができるかどうかを示すことができるReadinessヘルスチェックを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:158
 msgid "We will create another health check procedure that simulates a connection to an external service provider such as a database. For starters, we will always return the response indicating the application is ready."
-msgstr ""
+msgstr "ここでは、データベースなどの外部サービスプロバイダへの接続をシミュレートする別のヘルスチェックプロシージャを作成します。まずは、アプリケーションの準備ができていることを示すレスポンスを常に返すようにします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:160
@@ -477,7 +477,7 @@ msgstr "これまでは、レスポンスオブジェクトを直接構築する
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:260
 msgid "If you now rerun the readiness health check (at `http://localhost:8080/q/health/ready`)  the overall `status` should be DOWN. You can also check the liveness check at `http://localhost:8080/q/health/live` which will return the overall `status` UP because it isn't influenced by the readiness checks."
-msgstr ""
+msgstr "再度、Readinessヘルスチェック `http://localhost:8080/q/health/ready`)を再実行すると、全ての `status` がDOWNするはずです。また、以下の場所でlivenessチェックを行うこともできます。 `http://localhost:8080/q/health/live`この場合、全体の `status` はUPです。これは、Readinessチェックの影響を受けないためです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:264
@@ -487,7 +487,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:265
 msgid "it should be up again."
-msgstr ""
+msgstr "は、再びUPになるはずです。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:267
@@ -503,7 +503,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:277
 msgid "Let's create a new health check procedure `org.acme.microprofile.health.DataHealthCheck`:"
-msgstr ""
+msgstr "新しいヘルスチェック・プロシージャ `org.acme.microprofile.health.DataHealthCheck` を作成してみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:285
@@ -546,7 +546,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:310
 msgid "This functionality is specifically useful in failure scenarios where you can pass the error along with the health check response."
-msgstr ""
+msgstr "この機能は、ヘルスチェックの応答と一緒にエラーを渡すことができる障害シナリオで特に有用です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:322
