--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect.adoc.po
@@ -764,7 +764,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect.adoc:410
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
-msgstr ""
+msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect.adoc:411
