--- a/l10n/po/ja_JP/_versions/1.7/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-keycloak-authorization.adoc.po
@@ -692,7 +692,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-keycloak-authorization.adoc:359
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
-msgstr ""
+msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-keycloak-authorization.adoc:360
