--- a/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
@@ -184,7 +184,7 @@ msgstr "アプリケーションの設定"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:81
 msgid "The OpenID Connect extension allows you to define the configuration using the `application.properties` file which should be located at the `src/main/resources` directory."
-msgstr ""
+msgstr "OpenID Connect エクステンションを使用すると、src/main/resources` ディレクトリーにあるはずの `application.properties` ファイルを使用して設定を定義することができます。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:82
@@ -253,7 +253,7 @@ msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユ
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:116
 msgid "Import the {quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart/config/quarkus-realm.json[realm configuration file] to create a new realm. For more details, see the Keycloak documentation about how to https://www.keycloak.org/docs/latest/server_admin/index.html#_create-realm[create a new realm]."
-msgstr ""
+msgstr "新しいレルムを作成するには、{quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart/config/quarkus-realm.json[realm構成ファイル]をインポートします。詳細については、 link:https://www.keycloak.org/docs/latest/server_admin/index.html#_create-realm[新しいレルムの作成] 方法についてのKeycloakのドキュメントを参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:117
@@ -591,12 +591,12 @@ msgstr "トークンクレームとセキュリティーアイデンティティ
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:279
 msgid "The way the roles are mapped to the SecurityIdentity roles from the verified tokens is identical to how it is done for the link:security-openid-connect#token-claims-and-securityidentity-roles[bearer tokens] with the only difference being is that https://openid.net/specs/openid-connect-core-1_0.html#IDToken[ID Token] is used as a source of the roles by default."
-msgstr ""
+msgstr "検証済みトークンからSecurityIdentityのロールにロールをマッピングする方法は、 link:security-openid-connect#token-claims-and-securityidentity-roles[ベアラートークン] の場合と同じですが、唯一の違いは、 link:https://openid.net/specs/openid-connect-core-1_0.html#IDToken[ID] トークンがデフォルトでロールのソースとして使用されるということです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:281
 msgid "Note if you use Keycloak then you should set a Microprofile JWT client scope for ID token to contain a `groups` claim, please see the https://www.keycloak.org/docs/latest/server_admin/#protocol[Keycloak Server Administration Guide] for more information."
-msgstr ""
+msgstr "Keycloakを使用する場合は、IDトークン用のMicroprofile JWTクライアントスコープに `groups` クレームを含めるように設定する必要があることに注意してください。詳細については、 link:https://www.keycloak.org/docs/latest/server_admin/#protocol[Keycloakサーバー管理ガイド] を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:283
@@ -666,7 +666,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:317
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
-msgstr ""
+msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:318
