Translate tests-with-coverage.adoc.po

--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-20 00:46+0900\n"
+"PO-Revision-Date: 2021-04-14 08:26+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -141,9 +141,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:65
-#, fuzzy
 msgid "Now we'll be adding all the elements necessary to have an application that is properly covered with tests."
-msgstr "ここでは、テストで適切にカバーされたアプリケーションを持つために必要な要素をすべて追加していきます。"
+msgstr "ここで、アプリケーションをテストで適切にカバーするために必要な要素をすべて追加していきます。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:67
@@ -260,9 +259,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:123
-#, fuzzy
 msgid "The project will also need a test:"
-msgstr "プロジェクトにはいくつかのテストも必要です。最初に簡単なJUnitを作成します。"
+msgstr "プロジェクトにはテストも必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:131
@@ -328,13 +326,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:162
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up Jacoco"
 msgstr "Jacocoの設定"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:165
-#, fuzzy
 msgid "Now we need to add Jacoco to our project. To do this we need to add the following to the `pom.xml` dependencies section:"
 msgstr "次に、Jacocoをプロジェクトに追加する必要があります。そのためには、 `pom.xml` dependenciesセクションに以下を追加する必要があります。"
 
@@ -351,51 +348,45 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:177
-#, fuzzy
 msgid "This Quarkus extension takes care of everything that would usually be done via the Jacoco maven plugin, so no additional config is required."
-msgstr "このQuarkusの拡張機能は、通常はJacoco mavenプラグインで行われることをすべて行いますので、追加の設定は必要ありません。"
+msgstr "このQuarkusのエクステンションは、通常はJacoco mavenプラグインで行われることをすべて行いますので、追加の設定は必要ありません。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:178
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running the tests with coverage"
 msgstr "カバレッジ付きテストの実行"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:182
-#, fuzzy
 msgid "Run `mvn verify`, the tests will be run and the results will end up in `target/jacoco-reports`. This is all that is needed, the `quarkus-jacoco` extension allows Jacoco to just work out of the box."
-msgstr "`mvn verify` を実行すると、テストが実行され、その結果が `target/jacoco-reports` に反映されます。必要なのはこれだけで、 `quarkus-jacoco` の拡張機能を使えば、Jacoco はすぐに動作します。"
+msgstr "`mvn verify` を実行すると、テストが実行され、その結果が `target/jacoco-reports` に反映されます。必要なのはこれだけで、 `quarkus-jacoco` のエクステンションを使えば、Jacoco はすぐに動作します。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:184
-#, fuzzy
 msgid "There are some config options that affect this:"
 msgstr "これにはいくつかの設定オプションがあります。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:187
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Coverage for tests not using @QuarkusTest"
 msgstr "QuarkusTestを使用していないテストのカバレッジ"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:191
-#, fuzzy
 msgid "The Quarkus automatic Jacoco config will only work for tests that are annotated with `@QuarkusTest`. If you want to check the coverage of other tests as well then you will need to fall back to the Jacoco maven plugin."
 msgstr "Quarkusの自動Jacoco設定は、 `@QuarkusTest` でアノテーションされたテストに対してのみ機能します。他のテストのカバレッジもチェックしたい場合は、Jacoco mavenプラグインを利用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:194
-#, fuzzy
 msgid "Because Quarkus uses class file transformation it is not possible to use online transformation with the Jacoco agent.  Instead we need to use offline transformation."
 msgstr "Quarkusはクラスファイル変換を使用しているため、Jacocoエージェントでオンライン変換を使用することはできません。代わりにオフライン変換を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:196
-#, fuzzy
 msgid "Instead of including the `quarkus-jacoco` extension in your pom you will need the following config:"
-msgstr "`quarkus-jacoco` 拡張機能をpomに含める代わりに、以下のような設定が必要になります。"
+msgstr "`quarkus-jacoco` エクステンションをpomに含める代わりに、以下のような設定が必要になります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:246
@@ -452,7 +443,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:249
-#, fuzzy
 msgid "It also requires a small change in the Surefire configuration. Note below that we specified `jacoco-agent.destfile` as a system property in the default case (unit tests) and for the integration tests."
 msgstr "また、Surefireの設定を少し変更する必要があります。デフォルトの場合(ユニットテスト)と統合テストでは、システムのプロパティーとして `jacoco-agent.destfile` を指定していることに注意してください。"
 
