Add some translations

--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-03-16 22:38+0900\n"
+"PO-Revision-Date: 2021-04-14 15:02+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -388,10 +388,8 @@ msgstr "本番環境では使用しないでください。開発環境でのみ
 
 #. type: delimited block =
 #: upstream/_guides/maven-tooling.adoc:173
-#, fuzzy
-#| msgid "To do this you must build a mutable application, using the `mutable-jar` format. Set the following properties in `application.xml`:"
 msgid "To do this you must build a mutable application, using the `mutable-jar` format. Set the following properties in `application.properties`:"
-msgstr "これを行うには、 `mutable-jar`  形式を使用して、ミュータブルアプリケーションを構築する必要があります。 `application.xml`  で以下のプロパティーを設定します。"
+msgstr "これを行うには、 `mutable-jar` 形式を使用して、ミュータブルアプリケーションをビルドする必要があります。 `application.xml` で以下のプロパティーを設定してください。"
 
 #. type: delimited block -
 #: upstream/_guides/maven-tooling.adoc:179
@@ -419,9 +417,8 @@ msgstr "アプリがdevモードで実行されるURL。これはローカル側
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:188
-#, fuzzy
 msgid "The `mutable-jar` is then built in the same way that a regular Quarkus jar is built, i.e. by issuing:"
-msgstr "`mutable-jar` は、通常のQuarkus jarをビルドするのと同じ方法で、つまり、発行することでビルドされます。"
+msgstr "`mutable-jar` は、通常のQuarkus jarをビルドするのと同じ方法で発行することでビルドされます。つまり以下のように発行できます:"
 
 #. type: delimited block -
 #: upstream/_guides/maven-tooling.adoc:192
@@ -471,10 +468,8 @@ msgstr "HTTP 機能を使用したくない場合は、URL を指定せずに `r
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:220
-#, fuzzy
-#| msgid "The properties are shown below:"
 msgid "All the config options are shown below:"
-msgstr "プロパティーは以下の通りです:"
+msgstr "全ての設定オプションは以下の通りです:"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:227
@@ -988,10 +983,8 @@ msgstr "fast-jar の使用"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:523
-#, fuzzy
-#| msgid "When configuring `quarkus.package.type=fast-jar` (which will become the default soon), then the result of executing `./mvnw package` is a new directory under `target` named `quarkus-app`."
 msgid "`fast-jar` is now the default quarkus package type. The result of `./mvnw package` command is a new directory under `target` named `quarkus-app`."
-msgstr "`quarkus.package.type=fast-jar` を設定している場合 (これはもうすぐデフォルトになります)、 `./mvnw package` を実行した結果、 `target` の下に `quarkus-app` という名前の新しいディレクトリが作成されます。"
+msgstr "`fast-jar`が現在デフォルトのQuarkusのパッケージタイプです。 `./mvnw package` コマンドを実行した結果、 `target` の下に `quarkus-app` という名前の新しいディレクトリが作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:525
