--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-18 16:48+0900\n"
+"PO-Revision-Date: 2021-04-14 14:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -125,8 +125,6 @@ msgstr "アーキテクチャ"
 
 #. type: delimited block =
 #: upstream/_guides/kafka-streams.adoc:56
-#, fuzzy
-#| msgid "In this guide, we are going to generate (random) temperature values in one component (named `generator`).  These values are associated to given weather stations and are written in a Kafka topic (`temperature-values`).  Another topic (`weather-stations`) contains just the master data about the weather stations themselves (id and name)."
 msgid "In this guide, we are going to generate (random) temperature values in one component (named `generator`).  These values are associated to given weather stations and are written in a Kafka topic (`temperature-values`).  Another topic (`weather-stations`) contains just the main data about the weather stations themselves (id and name)."
 msgstr "このガイドでは、(ランダムな)温度値を 1 つのコンポーネント ( `generator` ) で生成します。これらの値は、与えられた気象観測所に関連付けられ、Kafka トピック ( `temperature-values` ) に書き込まれます。別のトピック ( `weather-stations` ) には、気象観測所自体に関するマスターデータ (id と名前) だけが格納されています。"
 
@@ -2177,10 +2175,8 @@ msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_guides/kafka-streams.adoc:1256
-#, fuzzy
-#| msgid "This guide has shown how you can build stream processing applications using Quarkus and the Kafka Streams APIs, both in JVM and native modes.  For running your KStreams application in production, you could also add health checks and metrics for the data pipeline.  Refer to the Quarkus guides on link:micrometer[Micrometer], link:microprofile-metrics[MicroProfile Metrics], and link:microprofile-health[health checks] to learn more."
 msgid "This guide has shown how you can build stream processing applications using Quarkus and the Kafka Streams APIs, both in JVM and native modes.  For running your KStreams application in production, you could also add health checks and metrics for the data pipeline.  Refer to the Quarkus guides on link:micrometer[Micrometer], link:smallrye-metrics[SmallRye Metrics], and link:smallrye-health[SmallRye Health] to learn more."
-msgstr "このガイドでは、QuarkusとKafka Streams APIを使用して、JVMとネイティブモードの両方でストリーム処理アプリケーションを構築する方法を紹介しました。KStreamsアプリケーションを本番環境で実行するために、データパイプラインのヘルスチェックやメトリクスを追加することもできます。詳細については、 link:micrometer[Micrometer] 、 link:microprofile-metrics[MicroProfile Metrics] 、 link:microprofile-health[ヘルスチェック] に関するQuarkusのガイドを参照してください。"
+msgstr "このガイドでは、QuarkusとKafka Streams APIを使用して、JVMとネイティブモードの両方でストリーム処理アプリケーションを構築する方法を紹介しました。KStreamsアプリケーションを本番環境で実行するために、データパイプラインのヘルスチェックやメトリクスを追加することもできます。詳細については、 link:micrometer[Micrometer] 、 link:smallrye-metrics[SmallRye Metrics] 、 link:smallrye-health[SmallRye Health] に関するQuarkusのガイドを参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-streams.adoc:1257
