Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/openapi-swaggerui.adoc.po
@@ -560,17 +560,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:327
 #, no-wrap
 msgid "Loading OpenAPI Schema From Static Files"
-msgstr ""
+msgstr "静的ファイルからの OpenAPI スキーマのロード"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:332
 msgid "Instead of dynamically creating OpenAPI schemas from annotation scanning, Quarkus also supports serving static OpenAPI documents.  The static file to serve must be a valid document conforming to the https://swagger.io/docs/specification[OpenAPI specification].  An OpenAPI document that conforms to the OpenAPI Specification is itself a valid JSON object, that can be represented in `yaml` or `json` formats."
-msgstr ""
+msgstr "Quarkusでは、アノテーションスキャンからOpenAPIスキーマを動的に作成する代わりに、静的なOpenAPIドキュメントの配信もサポートしています。サーブする静的ファイルは、 link:https://swagger.io/docs/specification[OpenAPI仕様] に準拠した有効なドキュメントである必要があります。OpenAPI仕様に準拠したOpenAPIドキュメントは、それ自体が有効なJSONオブジェクトであり、 `yaml` または `json` 形式で表現できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:335
 msgid "To see this in action, we'll put OpenAPI documentation under `META-INF/openapi.yaml` for our `/fruits` endpoints.  Quarkus also supports alternative <<open-document-paths, OpenAPI document paths>> if you prefer."
-msgstr ""
+msgstr "これを実際に確認するために、  `META-INF/openapi.yaml` のOpenAPIドキュメントを `/fruits` エンドポイントで公開します。Quarkusでは、必要に応じて代替の link:#open-document-paths[OpenAPIドキュメントパス] もサポートしています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:343
@@ -638,8 +638,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:389
+#, fuzzy
 msgid "By default, a request to `/openapi` will serve the combined OpenAPI document from the static file and the model generated from application endpoints code.  We can however change this to only serve the static OpenAPI document by adding `mp.openapi.scan.disable=true` configuration into `application.properties`."
-msgstr ""
+msgstr "デフォルトでは、 `/q/openapi` へのリクエストは、静的ファイルとアプリケーション エンドポイント コードから生成されたモデルを組み合わせた OpenAPI ドキュメントを提供します。しかし、 `application.properties` に `mp.openapi.scan.disable=true` 設定を追加することで、静的な OpenAPI ドキュメントのみを提供するように変更することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:391
@@ -690,7 +691,7 @@ msgstr "`WEB-INF/classes/META-INF/openapi.json`"
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:407
 msgid "Live reload of static OpenAPI document is supported during development. A modification to your OpenAPI document will be picked up on fly by Quarkus."
-msgstr ""
+msgstr "開発中は、静的なOpenAPIドキュメントのライブリロードがサポートされています。OpenAPIドキュメントへの変更は、Quarkusによって起動中にピックアップされます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:409
@@ -701,7 +702,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:413
 msgid "By default, when the document is generated, the OpenAPI version used will be `3.0.3`. If you use a static file as mentioned above, the version in the file will be used. You can also define the version in SmallRye using the following configuration:"
-msgstr ""
+msgstr "デフォルトでは、ドキュメント生成時に使用されるOpenAPIのバージョンは `3.0.3` です。上記のように静的ファイルを使用する場合は、そのファイルのバージョンが使用されます。また、以下の設定でSmallRyeでバージョンを定義することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:417
@@ -718,7 +719,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:421
 #, no-wrap
 msgid "Auto-generation of Operation Id"
-msgstr ""
+msgstr "操作IDの自動生成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:425
@@ -740,7 +741,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:433
 #, no-wrap
 msgid "The strategies available for generating the Operation Id"
-msgstr ""
+msgstr "操作Idを生成するために利用可能な戦略"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/openapi-swaggerui.adoc:435
