Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-reactive-datasource-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-reactive-datasource-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:13+0000\n"
+"POT-Creation-Date: 2021-04-14 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -456,7 +456,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The maximum time without data written to or read from a connection before it is closed.\n"
+"The maximum time a connection remains unused in the pool before it is closed.\n"
 "--"
 msgstr ""
 
@@ -769,7 +769,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The maximum time without data written to or read from a connection before it is closed.\n"
+"The maximum time a connection remains unused in the pool before it is closed.\n"
 "--"
 msgstr ""
 
